--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 # 2. Change these variables for your configuration:
 env:
   AZURE_FUNCTIONAPP_NAME: linkshorten # set this to your application's name
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'   # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'shorten'   # set this to the path to your web app project, defaults to the repository root
   PYTHON_VERSION: '3.6'                 # set this to the python version to use (supports 3.6, 3.7, 3.8)
 
 jobs:
@@ -36,7 +36,7 @@ jobs:
         popd
 
     - name: 'Run Azure Functions Action'
-      uses: Azure/functions-action@v1
+      uses: Azure/functions-action@v1.1.4
       id: fa
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
